--- a/Product-Detail/product-detail-preview.html
+++ b/Product-Detail/product-detail-preview.html
@@ -21,14 +21,14 @@
 			        	<li><a href="#"><i class="large material-icons">person_outline</i></a></li>
 			        	<li><a href="#"><i class="large material-icons">shopping_cart</i></a></li>
 			        </ul>
-				    <ul class="sidenav" id="mobile-demo">
-				    	<li><a href="#">Account&nbsp;<i class="large material-icons">person_outline</i></a></li>
-			        	<li><a href="#">Your Cart<i class="large material-icons">shopping_cart</i></a></li>
-			       	</ul>
 			    </div>
 			</nav>
 		</div>
 	</nav>
+	<ul class="sidenav" id="mobile-demo">
+		<li><a class="orange-text" href="#">Account<i class="material-icons orange-text">person_outline</i></a></li>
+		<li><a class="orange-text" href="#">Your Cart<i class="material-icons orange-text">shopping_cart</i></a></li>
+	</ul>
 	<main>
 		<div class="row">
 			<div id="product-img-cont" class="col s12 m6">
