--- a/Admin-Add_Product/adminpost.html
+++ b/Admin-Add_Product/adminpost.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&family=Roboto&display=swap" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
-
 </head>
 <body>
 	<div class="navbar-fixed">
@@ -18,18 +17,18 @@
 			   	<a href="#" id="logo" class="brand-logo orange-text">ADMIN</a>
 			   	 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 			   	<ul id="nav-mobile" class="right hide-on-med-and-down">
-			   		<li><a href="#">DashBoard</a></li>
+			   		<li><a href="signin.html">DashBoard</a></li>
 			       	<li><a href="#">View Products</a></li>
 			       	<li><a href="#">Buyer Details</a></li>
-			    </ul>
-			    <ul class="sidenav" id="mobile-demo">
-			    	<li><a href="#">DashBoard</a></li>
-			       	<li><a href="#">View Products</a></li>
-			       	<li><a href="#">Buyer Details</a></li>
-			      	</ul>
+			    </ul>  
 			</div>
 		</nav>
 	</div>
+	<ul class="sidenav" id="mobile-demo">
+		<li><a href="#">DashBoard</a></li>
+		<li><a href="#">View Products</a></li>
+		<li><a href="#">Buyer Details</a></li>
+	</ul>
 	<main class="main" style="display: block;">
 		<div class="form">
 			<h3 class="add-title center orange-text">ADD YOUR PRODUCT<hr width="100px"></h3>
