--- a/SignIn-Consumer/consumer-signin.html
+++ b/SignIn-Consumer/consumer-signin.html
@@ -11,60 +11,118 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
 </head>
 <body>
-	<main class="large-screen">
+	<main>
 		<div class="form">
 			<div class="row">
-				<div class="col m3">
-					<div class="valign-wrapper" style="border-right: 1px solid #dadce0;">
-						<div class="row center" style="padding:35px 0px 0px 0px;">
-							<a href="#">
-								<img src="img/consumer-home.svg" height="50px" width="45px">
-							</a><br>
-							<label>Home</label>
+<!-----------------------------Large_screen-Nav---------------------------------->		
+				<div id="large-screen-nav" class="hide-on-small-only">
+					<div class="col m3">
+						<div class="valign-wrapper" style="border-right: 1px solid #dadce0;">
+							<div class="row center" style="padding:35px 0px 0px 0px;">
+								<a href="#">
+									<img src="img/consumer-home.svg" height="50px" width="45px">
+								</a><br>
+								<label>Home</label>
+							</div>
 						</div>
-					</div>
-					<div class="valign-wrapper" style="border-right: 1px solid #dadce0;">
-						<div class="row center" style="padding:35px 0px 0px 0px;">
-							<a href="#" id="signin-main" style="border-bottom: 2px solid #ff8c00">
-								<img src="img/consumer-login.svg" height="55px" width="45px">
-							</a><br>
-							<label>Sign In</label>
+						<div class="valign-wrapper" style="border-right: 1px solid #dadce0;">
+							<div class="row center" style="padding:35px 0px 0px 0px;">
+								<a href="#" id="signin-main" style="border-bottom: 2px solid #ff8c00">
+									<img src="img/consumer-login.svg" height="55px" width="45px">
+								</a><br>
+								<label>Sign In</label>
+							</div>
 						</div>
-					</div>
-					<div class="valign-wrapper" style="border-right: 1px solid #dadce0;">
-						<div class="row center" style="padding:35px 0px 0px 0px;">
-							<a href="#" id="signup-main">
-								<img src="img/consumer-signup.svg" height="55px" width="45px">
-							</a><br>
-							<label id="signup-main">Sign Up</label>
+						<div class="valign-wrapper" style="border-right: 1px solid #dadce0;">
+							<div class="row center" style="padding:35px 0px 0px 0px;">
+								<a href="#" id="signup-main">
+									<img src="img/consumer-signup.svg" height="55px" width="45px">
+								</a><br>
+								<label id="signup-main">Sign Up</label>
+							</div>
 						</div>
-					</div>
-					<script type="text/javascript">
-			        	$( document ).ready(function(){
+						<script type="text/javascript">
+				        	$( document ).ready(function(){
 
-			        		$("#signin-main").click(function(e){
-								e.preventDefault();
-								$(".signin-content").show();
-								$(".signup-content").hide();
-								$("#signin-main").css("border-bottom","2px solid #ff8c00");
-								$("#signup-main").css("border-bottom","0px");
-			        		});
+				        		$("#signin-main").click(function(e){
+									e.preventDefault();
+									$(".signin-content").show();
+									$(".signup-content").hide();
+									$("#signin-main").css("border-bottom","2px solid #ff8c00");
+									$("#signup-main").css("border-bottom","0px");
+				        		});
 
-			        		$("#signup-main").click(function(e){
-								e.preventDefault();
-								$(".signup-content").show();
-								$(".signin-content").hide();
-								$("#signin-main").css("border-bottom","0px");
-								$("#signup-main").css("border-bottom","2px solid #ff8c00");
-			        		});
+				        		$("#signup-main").click(function(e){
+									e.preventDefault();
+									$(".signup-content").show();
+									$(".signin-content").hide();
+									$("#signin-main").css("border-bottom","0px");
+									$("#signup-main").css("border-bottom","2px solid #ff8c00");
+				        		});
 
-			        	});
-			        </script>	
+				        	});
+				        </script>
+				    </div>	
 				</div>
-				<div class="content-login">
-					<div class="col m9 center">
-						<div class="signin-content orange-text" style="padding:0px 30px;display:block;">
-							<h4>Sign In</h4><br><br>
+<!-----------------------------Small_screen-Nav---------------------------------->	
+				<div class="hide-on-med-and-up" id="small-screen-nav">
+					<div class="col s4">
+						<div style="border-bottom: 1px solid #dadce0;">
+							<div class="row center" style="padding:6px 17px 0px 17px;">
+								<a href="#">
+									<img src="img/consumer-home.svg" height="50px" width="45px">
+								</a><br>
+								<label>Home</label>
+							</div>
+						</div>
+					</div>
+					<div class="col s4">
+						<div style="border-bottom: 1px solid #dadce0;">
+							<div class="row center" style="padding:0px 17px 0px 17px;">
+								<a href="#" id="signin-main-small" style="border-bottom: 2px solid #ff8c00">
+									<img src="img/consumer-login.svg" height="55px" width="45px">
+								</a><br>
+								<label for="signin-main-small">Sign In</label>
+							</div>
+						</div>
+					</div>
+					<div class="col s4">
+						<div style="border-bottom: 1px solid #dadce0;">
+							<div class="row center">
+								<a href="#" id="signup-main-small">
+									<img src="img/consumer-signup.svg" height="55px" width="45px">
+								</a><br>
+								<label id="signup-main-small">Sign Up</label>
+							</div>
+						</div>
+						<script type="text/javascript">
+				        	$( document ).ready(function(){
+
+				        		$("#signin-main-small").click(function(e){
+									e.preventDefault();
+									$(".signin-content").show();
+									$(".signup-content").hide();
+									$("#signin-main-small").css("border-bottom","2px solid #ff8c00");
+									$("#signup-main-small").css("border-bottom","0px");
+				        		});
+
+				        		$("#signup-main-small").click(function(e){
+									e.preventDefault();
+									$(".signup-content").show();
+									$(".signin-content").hide();
+									$("#signin-main-small").css("border-bottom","0px");
+									$("#signup-main-small").css("border-bottom","2px solid #ff8c00");
+				        		});
+
+				        	});
+				        </script>
+				    </div>	
+				</div>
+<!-----------------------------Sign-In Content---------------------------------->	
+				<div class="content-login center">
+					<div class="col s12 m9 center">
+						<div class="signin-content orange-text" style="padding:0px 30px;display:block;margin-top:20px;">
+							<h4 style="color:#1c2224;">Sign In<hr width="50px"></h4><br><br>
 							<div class="row center">
 			    				<form class="col s12 m12">
 			      					<div class="row center" style="margin-bottom: 0px;">
@@ -98,8 +156,9 @@
 			        			</form>
 			        		</div>
 			        	</div>
-			        	<div class="signup-content orange-text" style="display:none;padding:0px 30px;">
-							<h4>Sign Up</h4><br><br>
+<!-----------------------------Sign-Up Content---------------------------------->	
+			        	<div class="signup-content orange-text" style="display:none;padding:0px 30px;margin-top:20px;">
+							<h4 style="color:#1c2224;">Sign Up</h4><hr width="50px"><br>
 							<div class="row center">
 			    				<form class="col s12 m12">
 			    					<div id="before-next">
@@ -123,20 +182,20 @@
 									    	<div class="col s6 m6">
 											    <label class="orange-text left">City</label>
 												<select>
-												    <option value="" disabled selected>Choose City</option>
+												    <option value="" disabled selected>Select</option>
 												    <option value="1">Bangalore</option>
 												</select>
 											</div>
 											<div class="col s6 m6">
 												<label class="orange-text left">State</label>
 												<select>
-												    <option value="" disabled selected>Choose State</option>
+												    <option value="" disabled selected>Select</option>
 												    <option value="1">Karnatka</option>
 												</select>
 											</div>
 										</div>
 										<div class="row center" style="margin-bottom: 0px;">
-				        					<button type="submit" id="next-btn" class="waves-effect waves-light btn orange darken-1" style="margin-top: 30px;">Check & Proceed</button>
+				        					<button type="submit" id="next-btn" class="waves-effect waves-light btn orange darken-1" style="margin-top: 30px;border-radius:10px;">Check & Proceed</button>
 				        					<script type="text/javascript">
 				        						$( document ).ready(function(){
 
@@ -165,7 +224,7 @@
 					          				<button id="signup-btn" type="submit" id="otp" class="waves-effect waves-light btn-large orange darken-1" style="margin-top: 30px;">Register</button>
 						        		</div>
 						        		<div class="row center">
-						        			<button type="submit" id="otp-btn-signup" class="waves-effect waves-light btn-large orange darken-1" style="border-radius: 15px;margin-top: 30px;">Generate OTP</button>
+						        			<button type="submit" id="otp-btn-signup" class="waves-effect waves-light btn-large orange darken-1" style="border-radius: 15px;margin-top: 30px;">Verify</button>
 				        					<script type="text/javascript">
 				        						$( document ).ready(function(){
 
