--- a/Admin-Add_Product/adminpost.html
+++ b/Admin-Add_Product/adminpost.html
@@ -175,6 +175,20 @@
 		        			</div>
 		        		</div>
 	        		</div>
+	        		<div class="row">
+	        			<h6 class="center">Validation<hr width="50px"></h6><br>
+	        			<div class="input-field col s12 m4 offset-m2">
+							<input type="text" class="datepicker" placeholder="End-Date For Checkpoints">
+						</div>
+						<div class="input-field col s10 m4 offset-m1">
+							<p>
+						      <label>
+						        <input type="checkbox" />
+						        <span>Display This Product</span>
+						      </label>
+						    </p>
+						</div>
+					</div><br>
 <!-----------------------------------------Checkpoints-End------------------------------>
 	        		<div class="row">
 	        			<div class="center">
@@ -314,19 +328,43 @@
 						</div>
 					</div>
 					<div class="row">
-						<p><span>No. Of Units Sold:&emsp;0 Units</span></p>
+						<span class="left">No. Of Units Sold:&emsp;<span id="soll"></span></span>
 					</div>
-					<div class="row">
-						<div class="progress-checkpoint">
-	                		<span style="font-size:13px;color: #26a69a;" id="checkpoint-content" class="col s9">Check-Point Progress</span>
-	                		<span style="font-size:13px;color: #26a69a;" id="checkpoint-content" class="col s3 right">99 Left</span>
-	            		</div><br>
-						<div class="progress">
-	      					<div class="determinate" style="background-color: #ff8c00; width: 1%;"></div>
-	  					</div>
-	  					<sub class="left"><label>0</label></sub>
-						<sub class="right"><label>100</label></sub><br>
+					<div id="checkpoint-details" class="row" >	
+						<div  id= "checkpoint" style="width: 100%;">
+						</div>
+						<div id="progress-bar" class="progress">
+      					<div class="determinate" id="bar" style="background-color: #ff8c00; width: 0%;"></div>
+  						</div>
+						<div id="cpqty"  style="width: 100%; margin-top: 10px;">
+						</div>
+						<div id= "cpprice"  style="width: 100%; margin-top: 0px;">
+						</div><br>
 					</div>
+					<script type="text/javascript">
+						var count= 5;
+						if(count>0){
+					        $("checkpoint-details").show();
+					        var x = 0;
+					        for(i=1;i<=count;i++){
+					            a = "CheckPointQuantity" + i.toString();
+					            var b = "CheckPointPrice" + i.toString();
+					            var c = (doc.data()[a]/quantity) *100;
+					            $("#checkpoint").append(
+					                `<div class = "cp" style=" min-width:${c-x}%;"><i class="fa fa-hand-scissors-o fa-rotate-270 " style="color:orange;" ></i></div><!--`
+					            );
+					            $("#cpqty").append(
+					                `<div class = "cp" style=" min-width:${c-x}%;">${doc.data()[a]}${doc.data()['Product_Unit']}</div><!--`
+					            );
+					            $("#cpprice").append(
+					                `<div class = "cp" style=" min-width:${c-x}%;">&#8377;${doc.data()[b]}</div><!--`
+					            );
+					            x =c;
+					        }
+					    }else{
+				            $("#checkpoint-details").hide();
+				        }
+					</script>
 					<div class="row">
 						<div class="btns center">
 							<a id="btn-main" class="waves-effect waves-light btn orange darken-1"><i class="material-icons right">shopping_basket</i>Add To Cart</a>
@@ -367,6 +405,8 @@
     		$('.sidenav').sidenav();
 
     		$('.materialboxed').materialbox();
+
+    		$('.datepicker').datepicker();
 
   		});	
 	</script>
